# Rubiks-Cube-Solver

./: CMakeLists.txt  README.md  main.cpp
Databases/: .cornerDepth5V1.txt.icloud
Model/: GenericRubiksCube.cpp  GenericRubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitboard.cpp
Model/PatternDatabases/: PatternDatabase.h
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.h
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
bits/: stdcpp.h
